src/objects/Project_Media_Spend__c.object
<CustomObject>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Media Spend</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Average_Monthly_Currency_History__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Average Monthly Currency History</label>
        <referenceTo>Average_Monthly_Currency_History__c</referenceTo>
        <relationshipLabel>Contract Media Spend</relationshipLabel>
        <relationshipName>Contract_Media_Spend</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Delivered__c</fullName>
        <label>Delivered</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Is_Sync__c</fullName>
        <formula>MMSpending__r.Is_Sync__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Sync</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MMSpending__c</fullName>
        <deleteConstraint>Cascade</deleteConstraint>
        <label>Media Manager Spendings</label>
        <referenceTo>MM_Spendings__c</referenceTo>
        <relationshipLabel>Contract Media Spend</relationshipLabel>
        <relationshipName>ContractMediaSpend</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <label>Project</label>
        <referenceTo>Payment__c</referenceTo>
        <relationshipLabel>Contract Media Spend</relationshipLabel>
        <relationshipName>ContractMediaSpends</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>StrikeId__c</fullName>
        <formula>Project__r.Project__r.Strike_ID__c</formula>
        <label>Strike Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>summarized__c</fullName>
        <defaultValue>false</defaultValue>
        <label>summarized</label>
        <type>Checkbox</type>
    </fields>
    <label>Contract Media Spend</label>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contract Media Spend</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>